--- a/Css/Archive.css
+++ b/Css/Archive.css
@@ -7,3 +7,38 @@ font-size:60px;
 font-weight:bold;
 text-shadow:1px 1px 6px rgba(0,0,0,0.4);
 }
+.capture_list .mimetype img {
+position:absolute;
+		 margin-left:-32px;
+}
+.capture_list .mimetype {
+	padding-left:32px;
+}
+
+
+.capture_list .diskette img{
+/*position:absolute;
+width:64px;
+left:17px;
+top:1px;*/
+	box-shadow:0px 0px 5px rgba(0,0,0,0.3);
+}
+.capture_list td {
+padding:0;
+}
+.capture_list a {
+color:#404040;
+display:block;
+display:inline-block;
+vertical-align:middle;
+text-align:center;
+height:60px;
+line-height:60px;
+width:100%;
+padding:10px 0px 9px 0px;
+}
+
+.capture_list a:hover {
+text-decoration:none;
+}
+
